--- a/bower.json
+++ b/bower.json
@@ -14,17 +14,13 @@
     "test",
     "tests"
   ],
-  "description": "test app video playlist using angular and html5 video",
-  "keywords": [
-    "angular",
-    "video"
-  ],
   "dependencies": {
     "angular-bootstrap": "~0.11.0",
     "angular-resource": "~1.2.23",
     "angular-route": "~1.2.23",
-    "angular-scrollable-table": "*",
     "angular": "~1.2.23",
+    "bootstrap": "~3.2.0",
+    "angular-scrollable-table": "*",
     "jquery": "~2.1.1"
   }
 }
